A new model and add measure of bidding quality

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Bridge Engine Demo</title>
-    <script type="text/javascript" src="log.js"></script> 
+    <script src="log.js"></script> 
     <style>
         .example {
             margin-left: 20px;
