--- a/src/frontend/bridge.html
+++ b/src/frontend/bridge.html
@@ -1,13 +1,13 @@
 <!doctype html>
-
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
   <title>Bridge</title>
 
   <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="bridge.js"></script>
+  <script src="bridge.js"></script>
 
     <!-- Include jQuery and jQuery UI -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-<div id="loader" class="center"></div> 
+<div id="loader"></div> 
 <!-- HTML for the dialog -->
 <div id="customDialog" title="Feedback">
     <textarea id="commentInput" placeholder="Enter your comments here..."></textarea>
@@ -94,7 +94,7 @@
     <div id="auctionstr"></div>
 
 
-    <script type="text/javascript">
+    <script>
         console.log('starting')
 
         let timeoutId
