Added PAR for boards from Practice Bidding, and implemented a new neural network. New models for GIB, and carding enhanced

--- a/src/frontend/api.html
+++ b/src/frontend/api.html
@@ -321,7 +321,7 @@
                     <p><strong>HCP:</strong> ${data.hcp.join(' - ')}</p>
                     <p><strong>Shape:</strong> ${formattedShape}</p>
                     `;
-                if (data.quality) {
+                if (data.quality != null) {
                     html += `
                     <p><strong>Sample quality: </strong>${data.quality}</p>
                     `;
@@ -466,7 +466,7 @@
                 }
 
             }
-            if (data.quality) {
+            if (data.quality != null) {
                     html += `
                     <p><strong>Sample quality: </strong>${data.quality}</p>
                     `;
