--- a/src/frontend/api.html
+++ b/src/frontend/api.html
@@ -156,7 +156,7 @@
             bidSequence = bidSequence.map(item => {
                 if (item === "D") {
                     return "X";
-                } else if (item === "RD") {
+                } else if (item === "R") {
                     return "XX";
                 }
                 return item; // Keep other items unchanged
