--- a/src/frontend/api.html
+++ b/src/frontend/api.html
@@ -619,10 +619,13 @@
         }
 
         function displayPlay(data, player, declarer) {
-            let html = ""
+            let html = "<h3>Play</h3><br> " + this.data["card"] + " selected by " + this.data["who"] + "<br/><br/>"
 
             if ("candidates" in data && data.candidates.length > 0) {
                 html += '<h3>Candidates</h3>'
+                html += '<p>We have 3 different parameters for selecting the card, and first goal is to make/set the contract (if not matchpoints), then the double dummy score, and finally the score from the neural network.'
+                html += 'But if the quality of the samples are bad (or the nn suggest a specific card with confidence), then we select the that card.'
+                html += 'Also be aware that the data is rounded to nearest even number before comparing.</p>'
                 html += '<table>'
 
                 for (const candidate of data.candidates) {
@@ -678,7 +681,7 @@
                         html += '</div>'
                     } else {
                         // we are seated after declarer
-                        if ((player - declarer + 4) % 4 == 3) {
+                        if ((player - declarer + 4) % 4 == 1) {
                             html += '<div>Declarer: ' + data['hcp'][0] + ' hcp, shape: '
                             for (let i = 0; i < 4; i++) {
                                 html += shape[i] + " "
@@ -691,7 +694,7 @@
                             html += '</div>'
                         } else
                             // we are seated before declarer
-                            if ((player - declarer + 4) % 4 == 1) {
+                            if ((player - declarer + 4) % 4 == 3) {
                                 html += '<div>Partner: ' + data['hcp'][0] + ' hcp, shape: '
                                 for (let i = 0; i < 4; i++) {
                                     html += shape[i] + " "
